infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-challenge
  labels:
    app: devops-challenge
spec:
  type: ClusterIP
  selector:
    app: devops-challenge
  ports:
    - name: http
      port: 80
      targetPort: 8080
