infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-challenge
  labels:
    app: devops-challenge
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: devops-challenge.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-challenge
                port:
                  number: 80
